Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="hero-image">
                 <div class="image-container">
                     <div class="glow-effect"></div>
-                    <img src="assets/images/profile.png" alt="Aditya Singh" onerror="this.style.display='none'">
+                    <img src="assets/profile.png" alt="Aditya Singh" onerror="this.style.display='none'">
                 </div>
             </div>
         </div>
@@ -451,7 +451,7 @@
                         </div>
                     </div>
                     <div class="project-image">
-                        <img src="assets/images/codesage.png" alt="CodeSage Project" onerror="this.src='https://via.placeholder.com/600x400/0a0a0a/00ffff?text=CodeSage'">
+                        <img src="assets/codesage.png" alt="CodeSage Project" onerror="this.src='https://via.placeholder.com/600x400/0a0a0a/00ffff?text=CodeSage'">
                         <div class="image-overlay"></div>
                     </div>
                 </div>
@@ -497,7 +497,7 @@
                         </div>
                     </div>
                     <div class="project-image">
-                        <img src="assets/images/depth-estimation.png" alt="Depth Estimation Project" onerror="this.src='https://via.placeholder.com/600x400/0a0a0a/00ffff?text=Stereo+Vision'">
+                        <img src="assets/depth-estimation.png" alt="Depth Estimation Project" onerror="this.src='https://via.placeholder.com/600x400/0a0a0a/00ffff?text=Stereo+Vision'">
                         <div class="image-overlay"></div>
                     </div>
                 </div>
@@ -545,7 +545,7 @@
                         </div>
                     </div>
                     <div class="project-image">
-                        <img src="assets/images/cloudflux.png" alt="CloudFlux Project" onerror="this.src='https://via.placeholder.com/600x400/0a0a0a/00ffff?text=CloudFlux+AI'">
+                        <img src="assets/cloudflux.png" alt="CloudFlux Project" onerror="this.src='https://via.placeholder.com/600x400/0a0a0a/00ffff?text=CloudFlux+AI'">
                         <div class="image-overlay"></div>
                     </div>
                 </div>
