Update hero description in index.html
Removed BITSAT Top 1% mention from hero description.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <span class="cursor">|</span>
                 </div>
                 <p class="hero-description">
-                    3rd-year CS student at BITS Pilani (BITSAT Top 1%) specializing in Computer Vision and Deep Learning. 
+                    3rd-year CS student at BITS Pilani specializing in Computer Vision and Deep Learning. 
                     Hackathon finalist with 99%+ model accuracy. Research work in stereo vision and ML. 
                     Former intern at Beckn Protocol (Digital Energy Grid) and bug bounty contributor who saved ₹4L+ for FamPay.
                 </p>
